<resources>
    <string name="app_name">My Application</string>
    <string name="jap_a">Japanese A</string>
    <string name="jap_i">Japanese I</string>
    <string name="jap_u">Japanese U</string>
    <string name="jap_e">Japanese E</string>
    <string name="jap_o">Japanese O</string>
    <string name="empty_box">Empty Box</string>
    <string name="hiragana_vowels">Hiragana Vowels</string>
    <string name="status_bar">StatusBar</string>
    <string name="check_button">Check Box</string>
    <string name="try_again_button">Try Again</string>
    <string name="back_arrow_button">Back Arrow</string>
    <string name="profile_image_button">Profile Image</string>
</resources>