<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HiraganaKs">

    <ImageView
            android:layout_width="110dp"
            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ka" android:id="@+id/src"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintVertical_bias="0.289" tools:srcCompat="@drawable/hiragana_ka"
            android:contentDescription="@string/jap_a" android:onClick="onClickSRC1"/>
    <ImageView
            android:layout_width="110dp"
            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ki" android:id="@+id/src6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintVertical_bias="0.397" tools:srcCompat="@drawable/hiragana_ki"
            android:contentDescription="@string/jap_i" android:onClick="onClickSRC2"/>
    <ImageView
            android:layout_width="110dp"
            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ku" android:id="@+id/src7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintVertical_bias="0.506" tools:srcCompat="@drawable/hiragana_ku"
            android:contentDescription="@string/jap_u" android:onClick="onClickSRC3"/>
    <ImageView
            android:layout_width="110dp"
            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ke" android:id="@+id/src8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintVertical_bias="0.617" tools:srcCompat="@drawable/hiragana_ke"
            android:contentDescription="@string/jap_e" android:onClick="onClickSRC4"/>
    <ImageView
            android:layout_width="110dp"
            android:layout_height="65dp" app:srcCompat="@drawable/hiragana_ko" android:id="@+id/src9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintVertical_bias="0.725" tools:srcCompat="@drawable/hiragana_ko"
            android:contentDescription="@string/jap_o" android:onClick="onClickSRC5"/>
    <ImageView
            android:layout_width="110dp"
            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.287" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.747" android:visibility="visible" tools:visibility="visible"
            android:background="#00000000" app:srcCompat="@drawable/empty_box"
            android:contentDescription="@string/empty_box" android:onClick="onClickTRG1"/>
    <ImageView
            android:layout_width="110dp"
            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.397" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.747" android:visibility="visible" tools:visibility="visible"
            android:background="#00000000" app:srcCompat="@drawable/empty_box"
            android:contentDescription="@string/empty_box" android:onClick="onClickTRG2"/>
    <ImageView
            android:layout_width="110dp"
            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.506" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.747" android:visibility="visible" tools:visibility="visible"
            android:background="#00000000" app:srcCompat="@drawable/empty_box"
            android:contentDescription="@string/empty_box" android:onClick="onClickTRG3"/>
    <ImageView
            android:layout_width="110dp"
            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.617" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.747" android:visibility="visible" tools:visibility="visible"
            android:background="#00000000" app:srcCompat="@drawable/empty_box"
            android:contentDescription="@string/empty_box" android:onClick="onClickTRG4"/>
    <ImageView
            android:layout_width="110dp"
            android:layout_height="65dp" tools:srcCompat="@drawable/empty_box" android:id="@+id/trg9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.725" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.747" android:visibility="visible" tools:visibility="visible"
            android:background="#00000000" app:srcCompat="@drawable/empty_box"
            android:contentDescription="@string/empty_box" android:onClick="onClickTRG5"/>
    <ImageView
            android:layout_width="386dp"
            android:layout_height="21dp" app:srcCompat="@drawable/status_bar" android:id="@+id/status_bar2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/status_bar"/>
    <ImageView
            android:layout_width="63dp"
            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/profile_image2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintVertical_bias="0.048" android:contentDescription="@string/profile_image_button"/>
    <ImageView
            android:layout_width="47dp"
            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/back_button2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintVertical_bias="0.068" android:contentDescription="@string/back_arrow_button"
            android:onClick="onClickBackArrow"/>
    <ImageView
            android:layout_width="277dp"
            android:layout_height="75dp" app:srcCompat="@drawable/hiragana_ks" android:id="@+id/hiragana_text2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.147" android:contentDescription="@string/hiragana_vowels"/>
    <ImageView
            android:layout_width="213dp"
            android:layout_height="62dp" tools:srcCompat="@drawable/try_again_button"
            android:id="@+id/try_again_button2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.852" app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible" tools:visibility="visible"
            android:background="#00000000" app:srcCompat="@drawable/try_again_button"
            android:contentDescription="@string/try_again_button" android:onClick="onClickTryAgain"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="60dp" tools:srcCompat="@drawable/check_button" android:id="@+id/check_button2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.956" app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible" tools:visibility="visible"
            android:background="#00000000" app:srcCompat="@drawable/check_button"
            android:contentDescription="@string/check_button" android:onClick="onClickCheck"
            app:layout_constraintHorizontal_bias="0.497"/>
</androidx.constraintlayout.widget.ConstraintLayout>