<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NextActivity" tools:ignore="ExtraText">

    <ImageView
            android:layout_width="386dp"
            android:layout_height="21dp" app:srcCompat="@drawable/status_bar" android:id="@+id/status_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/status_bar"/>
    <ImageView
            android:layout_width="63dp"
            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/imageView6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintVertical_bias="0.048" android:contentDescription="@string/profile_image_button"/>
    <ImageView
            android:layout_width="47dp"
            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintVertical_bias="0.068" android:contentDescription="@string/back_arrow_button"
            android:onClick="onClickBackButton"/>
    <ImageView
            android:layout_width="192dp"
            android:layout_height="117dp" app:srcCompat="@drawable/hiragana_vowels_button" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintVertical_bias="0.415" android:contentDescription="@string/back_arrow_button"
            android:onClick="onClickHiraganaButton"/>
    <ImageView
            android:layout_width="192dp"
            android:layout_height="117dp" app:srcCompat="@drawable/hiragana_ks_button" android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.972"
            app:layout_constraintVertical_bias="0.415" android:contentDescription="@string/back_arrow_button"
            android:onClick="onClickBackArrow"/>
    <ImageView
            android:layout_width="412dp"
            android:layout_height="145dp" app:srcCompat="@drawable/hiragana_home" android:id="@+id/screen_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.152" android:contentDescription="@string/hiragana_vowels"
            app:layout_constraintHorizontal_bias="0.666"/>

</androidx.constraintlayout.widget.ConstraintLayout>