<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HiraganaHome" tools:ignore="ExtraText">

    <ImageView
            android:layout_width="386dp"
            android:layout_height="21dp" app:srcCompat="@drawable/status_bar" android:id="@+id/status_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/status_bar"/>
    <ImageView
            android:layout_width="63dp"
            android:layout_height="57dp" app:srcCompat="@drawable/profile_image" android:id="@+id/profile_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintVertical_bias="0.048" android:contentDescription="@string/profile_image_button"/>
    <ImageView
            android:layout_width="47dp"
            android:layout_height="27dp" app:srcCompat="@drawable/back_arrow" android:id="@+id/back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintVertical_bias="0.068" android:contentDescription="@string/back_arrow_button"
            android:onClick="onClickBackButton"/>
    <ImageView
            android:layout_width="412dp"
            android:layout_height="145dp" app:srcCompat="@drawable/hiragana_home" android:id="@+id/hiragana_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.152" android:contentDescription="@string/hiragana_vowels"
            app:layout_constraintHorizontal_bias="0.666"/>

    /*ScrollView*/

    <ScrollView
            android:layout_width="286dp"
            android:layout_height="487dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:clipChildren="true"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.959"
            app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="vertical" android:fillViewport="true">
            <ImageView
                    android:layout_width="280dp"
                    android:layout_height="80dp" app:srcCompat="@drawable/hiragana_vowels_button"
                    android:id="@+id/vowels_button"
                    android:onClick="onClickVowelsButton" android:cropToPadding="false"/>
            <ImageView
                    android:layout_width="280dp"
                    android:layout_height="80dp" app:srcCompat="@drawable/hiragana_ks_button"
                    android:id="@+id/ks_button"
                    android:onClick="onClickKsButton"/>
            <ImageView
                    android:layout_width="280dp"
                    android:layout_height="80dp" app:srcCompat="@drawable/hiragana_ss_button"
                    android:id="@+id/ss_button"
                    android:onClick="onClickSsButton"/>
            <ImageView
                    android:layout_width="280dp"
                    android:layout_height="80dp" app:srcCompat="@drawable/hiragana_ts_button"
                    android:id="@+id/ts_button"
                    android:onClick="onClickTsButton"/>
            <ImageView
                    android:layout_width="280dp"
                    android:layout_height="80dp" app:srcCompat="@drawable/hiragana_ns_button"
                    android:id="@+id/ns_button"
            />
            <ImageView
                    android:layout_width="280dp"
                    android:layout_height="80dp" app:srcCompat="@drawable/hiragana_hs_button"
                    android:id="@+id/hs_button"
            />
            <ImageView
                    android:layout_width="280dp"
                    android:layout_height="80dp" app:srcCompat="@drawable/hiragana_ms_button"
                    android:id="@+id/ms_button"
            />
            <ImageView
                    android:layout_width="280dp"
                    android:layout_height="80dp" app:srcCompat="@drawable/hiragana_ys_button"
                    android:id="@+id/ys_button"
            />
            <ImageView
                    android:layout_width="280dp"
                    android:layout_height="80dp" app:srcCompat="@drawable/hiragana_rs_button"
                    android:id="@+id/rs_button"
            />
            <ImageView
                    android:layout_width="280dp"
                    android:layout_height="80dp" app:srcCompat="@drawable/hiragana_ws_button"
                    android:id="@+id/ws_button"
            />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>